<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.Activites.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_10sdp"
            android:scaleX="-1"
            android:src="@drawable/ic_back_arrow_black" />


        <TextView
            style="@style/AppTheme.TextView.big"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/active_account"
            android:textColor="@color/black_text_normal"
            android:textStyle="bold" />


        <TextView
            style="@style/AppTheme.TextView.normal"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/please_enter_otp_to_send_sms"
            android:textColor="@color/gray_text_light" />


        <TextView
            style="@style/AppTheme.TextView.normal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/phone_number"
            android:textColor="@color/black_text_light" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/text_color_high_light"
            android:gravity="right"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:lines="1"
            android:outlineSpotShadowColor="@color/text_color_high_light"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textAlignment="gravity"
            android:textColor="@color/black_text_normal"
            android:textColorHighlight="@color/text_color_high_light"
            android:textColorLink="@color/text_color_high_light"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_14sdp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerfiy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_button_green"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>


</LinearLayout>
