<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.Activites.VerificationOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_10sdp"
            android:scaleX="-1"
            android:src="@drawable/ic_back_arrow_black" />


        <TextView
            style="@style/AppTheme.TextView.big"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/confirm_account"
            android:textColor="@color/black_text_normal"
            android:textStyle="bold" />


        <TextView
            style="@style/AppTheme.TextView.normal"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/otp_message"
            android:textColor="@color/gray_text_light" />


        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:cursorVisible="true"
            android:gravity="center"
            app:lineColor="@color/gray_light"
            android:inputType="number"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:cursorColor="@color/gray_light"
            app:cursorWidth="1dp"
            app:itemCount="6"
            app:itemHeight="@dimen/_50sdp"
            app:itemRadius="0dp"
            app:itemSpacing="@dimen/_15sdp"
            app:itemWidth="@dimen/_30sdp"
            app:lineWidth="@dimen/_2sdp"
            app:viewType="line" />

        <TextView
            android:id="@+id/tvReSend"
            style="@style/AppTheme.TextView.normal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/resend_code"
            android:textColor="@color/green_normal" />





        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_button_green"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />



    </LinearLayout>


</LinearLayout>
