<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.Activites.ActiveAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/background_white_shape"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvName"
                    style="@style/AppTheme.TextView.normal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:textStyle="bold"
                    android:textColor="@color/black_text_normal" />

                <TextView
                    android:id="@+id/tvNumberUniversty"
                    style="@style/AppTheme.TextView.normal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:textStyle="bold"
                    android:textColor="@color/black_text_normal" />

                <TextView
                    android:id="@+id/tvSpeciality"
                    style="@style/AppTheme.TextView.normal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:textStyle="bold"
                    android:textColor="@color/black_text_normal"
                   />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:layout_height="100dp"
                android:src="@drawable/student_logo" />

        </LinearLayout>


        <TextView
            style="@style/AppTheme.TextView.normal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/phone_number"
            android:textColor="@color/black_text_light" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/text_color_high_light"
            android:inputType="phone"
            android:lines="1"
            android:textCursorDrawable="@drawable/color_cursor"
            android:gravity="right"
            android:textAlignment="gravity"
            android:imeOptions="actionDone"
            android:outlineSpotShadowColor="@color/text_color_high_light"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textColor="@color/black_text_normal"
            android:textColorHighlight="@color/text_color_high_light"
            android:textColorLink="@color/text_color_high_light"
            android:textSize="@dimen/_14sdp" />


        <TextView
            style="@style/AppTheme.TextView.normal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/email"
            android:textColor="@color/black_text_light" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/text_color_high_light"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textCursorDrawable="@drawable/color_cursor"
            android:gravity="right"
            android:textAlignment="gravity"
            android:imeOptions="actionDone"
            android:outlineSpotShadowColor="@color/text_color_high_light"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textColor="@color/black_text_normal"
            android:textColorHighlight="@color/text_color_high_light"
            android:textColorLink="@color/text_color_high_light"
            android:textSize="@dimen/_14sdp" />

        <TextView
            style="@style/AppTheme.TextView.normal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/linked_in"
            android:textColor="@color/black_text_light" />

        <EditText
            android:id="@+id/etLinkedIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/text_color_high_light"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textCursorDrawable="@drawable/color_cursor"
            android:gravity="right"
            android:textAlignment="gravity"
            android:imeOptions="actionDone"
            android:outlineSpotShadowColor="@color/text_color_high_light"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textColor="@color/black_text_normal"
            android:textColorHighlight="@color/text_color_high_light"
            android:textColorLink="@color/text_color_high_light"
            android:textSize="@dimen/_14sdp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/dark"
            android:gravity="center"
            android:text="تحديث الحساب"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>


</androidx.core.widget.NestedScrollView>
